Issue #258 - Updating form-action mobile margins.

--- a/scss/base/_views.scss
+++ b/scss/base/_views.scss
@@ -72,10 +72,15 @@
     .form-actions {
       margin-top: 0;
       min-width: unset;
+      margin-bottom: $spacer * .5;
 
       input,
       button {
         margin-top: 0;
+      }
+
+      @include media-breakpoint-up('md') {
+        margin-bottom: $spacer;
       }
     }
 
@@ -89,6 +94,7 @@
     }
 
     label {
+      font-size: $font-size-sm;
       font-weight: $font-weight-medium;
     }
   }
